--- a/form.html
+++ b/form.html
@@ -1,119 +1,103 @@
-<!--  ----------------------------------------------------------------------  -->
-<!--  NOTE: Please add the following <META> element to your page <HEAD>.      -->
-<!--  If necessary, please modify the charset parameter to specify the        -->
-<!--  character set of your HTML page.                                        -->
-<!--  ----------------------------------------------------------------------  -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form</title>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-    <script src="https://www.google.com/recaptcha/api.js"></script>
-    <script>
-      function timestamp() {
-        var response = document.getElementById("g-recaptcha-response");
-        if (response == null || response.value.trim() == "") {
-          var elems = JSON.parse(
-            document.getElementsByName("captcha_settings")[0].value
-          );
-          elems["ts"] = JSON.stringify(new Date().getTime());
-          document.getElementsByName("captcha_settings")[0].value =
-            JSON.stringify(elems);
-        }
-      }
-      setInterval(timestamp, 500);
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>New Lead</title>
+    <link rel="stylesheet" href="form-style.css" />
   </head>
-  <!--  ----------------------------------------------------------------------  -->
-  <!--  NOTE: Please add the following <FORM> element to your page.             -->
-  <!--  ----------------------------------------------------------------------  -->
+
   <body>
-    <main>
-      <div>
-        <form
-          action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
-          method="POST"
-        >
-          <input
-            type="hidden"
-            name="captcha_settings"
-            value='{"keyname":"Captcha","fallback":"true","orgId":"00D5j00000AfQZJ","ts":""}'
-          />
-          <input type="hidden" name="oid" value="00D5j00000AfQZJ" />
-          <input type="hidden" name="retURL" value="http://google.com" />
+    <div class="conatiner">
+      <script src="https://www.google.com/recaptcha/api.js"></script>
+      <script>
+        function timestamp() {
+          var response = document.getElementById("g-recaptcha-response");
+          if (response == null || response.value.trim() == "") {
+            var elems = JSON.parse(
+              document.getElementsByName("captcha_settings")[0].value
+            );
+            elems["ts"] = JSON.stringify(new Date().getTime());
+            document.getElementsByName("captcha_settings")[0].value =
+              JSON.stringify(elems);
+          }
+        }
+        setInterval(timestamp, 500);
+      </script>
 
-          <!--  ----------------------------------------------------------------------  -->
-          <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
-          <!--  these lines if you wish to test in debug mode.                          -->
-          <!--  <input type="hidden" name="debug" value=1>                              -->
-          <!--  <input type="hidden" name="debugEmail" value="7620226@gmail.com">       -->
-          <!--  ----------------------------------------------------------------------  -->
+      <form
+        action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
+        method="POST"
+      >
+        <input
+          type="hidden"
+          name="captcha_settings"
+          value='{"keyname":"captcha_second","fallback":"true","orgId":"00D5j00000AfQZJ","ts":""}'
+        />
+        <input type="hidden" name="oid" value="00D5j00000AfQZJ" />
+        <input type="hidden" name="retURL" value="http://google.com" />
 
-          <label for="first_name">First Name</label
-          ><input
-            id="first_name"
-            maxlength="40"
-            name="first_name"
-            size="20"
-            type="text"
-          /><br />
+        <label for="first_name">First Name</label
+        ><input
+          id="first_name"
+          maxlength="40"
+          name="first_name"
+          size="20"
+          type="text"
+        /><br />
 
-          <label for="last_name">Last Name</label
-          ><input
-            id="last_name"
-            maxlength="80"
-            name="last_name"
-            size="20"
-            type="text"
-          /><br />
+        <label for="last_name">Last Name</label
+        ><input
+          id="last_name"
+          maxlength="80"
+          name="last_name"
+          size="20"
+          type="text"
+        /><br />
 
-          <label for="email">Email</label
-          ><input
-            id="email"
-            maxlength="80"
-            name="email"
-            size="20"
-            type="text"
-          /><br />
+        <label for="email">Email</label
+        ><input
+          id="email"
+          maxlength="80"
+          name="email"
+          size="20"
+          type="text"
+        /><br />
 
-          <label for="company">Company</label
-          ><input
-            id="company"
-            maxlength="40"
-            name="company"
-            size="20"
-            type="text"
-          /><br />
+        <label for="company">Company</label
+        ><input
+          id="company"
+          maxlength="40"
+          name="company"
+          size="20"
+          type="text"
+        /><br />
 
-          <label for="city">City</label
-          ><input
-            id="city"
-            maxlength="40"
-            name="city"
-            size="20"
-            type="text"
-          /><br />
+        <label for="city">City</label
+        ><input
+          id="city"
+          maxlength="40"
+          name="city"
+          size="20"
+          type="text"
+        /><br />
 
-          <label for="state">State/Province</label
-          ><input
-            id="state"
-            maxlength="20"
-            name="state"
-            size="20"
-            type="text"
-          /><br />
+        <label for="state">State/Province</label
+        ><input
+          id="state"
+          maxlength="20"
+          name="state"
+          size="20"
+          type="text"
+        /><br />
 
-          <div
-            class="g-recaptcha"
-            data-sitekey="6LeDD4MfAAAAAGlGRcpmFSj-v6q07MrhSzz5UDnp"
-          ></div>
-          <br />
-          <input type="submit" name="submit" />
-        </form>
-      </div>
-    </main>
+        <div
+          class="g-recaptcha"
+          data-sitekey="6LfMF4YfAAAAAFbCSBl3DLEuver-pLXuUeUpuV3_"
+        ></div>
+        <br />
+        <input type="submit" name="submit" />
+      </form>
+    </div>
   </body>
 </html>
