feat: product picklist, submit page

--- a/submit.html
+++ b/submit.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,5 +6,12 @@
     <title>Lead Submitted</title>
     <link rel="stylesheet" href="submit-style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="container">
+       <h1>Your form successfully saved in Salesforce </h1>
+      </div>
+    </main>
+
+  </body>
 </html>
