--- a/form.html
+++ b/form.html
@@ -8,96 +8,157 @@
   </head>
 
   <body>
-    <div class="conatiner">
-      <script src="https://www.google.com/recaptcha/api.js"></script>
-      <script>
-        function timestamp() {
-          var response = document.getElementById("g-recaptcha-response");
-          if (response == null || response.value.trim() == "") {
-            var elems = JSON.parse(
-              document.getElementsByName("captcha_settings")[0].value
-            );
-            elems["ts"] = JSON.stringify(new Date().getTime());
-            document.getElementsByName("captcha_settings")[0].value =
-              JSON.stringify(elems);
+    <header>
+      <h1>Web-to-lead Form</h1>
+    </header>
+    <main>
+      <div class="container">
+        <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+        <script src="https://www.google.com/recaptcha/api.js"></script>
+        <script>
+          function timestamp() {
+            var response = document.getElementById("g-recaptcha-response");
+            if (response == null || response.value.trim() == "") {
+              var elems = JSON.parse(
+                document.getElementsByName("captcha_settings")[0].value
+              );
+              elems["ts"] = JSON.stringify(new Date().getTime());
+              document.getElementsByName("captcha_settings")[0].value =
+                JSON.stringify(elems);
+            }
           }
-        }
-        setInterval(timestamp, 500);
-      </script>
+          setInterval(timestamp, 500);
+        </script>
 
-      <form
-        action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
-        method="POST"
-      >
-        <input
-          type="hidden"
-          name="captcha_settings"
-          value='{"keyname":"captcha_second","fallback":"true","orgId":"00D5j00000AfQZJ","ts":""}'
-        />
-        <input type="hidden" name="oid" value="00D5j00000AfQZJ" />
-        <input type="hidden" name="retURL" value="http://google.com" />
+        <form
+          action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
+          method="POST"
+          class="lead-form"
+        >
+          <input
+            type="hidden"
+            name="captcha_settings"
+            value='{"keyname":"captcha_second","fallback":"true","orgId":"00D5j00000AfQZJ","ts":""}'
+          />
+          <input type="hidden" name="oid" value="00D5j00000AfQZJ" />
+          <input
+            type="hidden"
+            name="retURL"
+            value="https://serafim1337.github.io/web-to-lead/submit.html"
+          />
 
-        <label for="first_name">First Name</label
-        ><input
-          id="first_name"
-          maxlength="40"
-          name="first_name"
-          size="20"
-          type="text"
-        /><br />
+          <input
+            id="company"
+            maxlength="40"
+            name="company"
+            size="20"
+            type="text"
+            placeholder="Company"
+            class="lead-input"
+          /><br />
 
-        <label for="last_name">Last Name</label
-        ><input
-          id="last_name"
-          maxlength="80"
-          name="last_name"
-          size="20"
-          type="text"
-        /><br />
+          <input
+            id="first_name"
+            maxlength="40"
+            name="first_name"
+            size="20"
+            type="text"
+            placeholder="First Name"
+            class="lead-input"
+          /><br />
 
-        <label for="email">Email</label
-        ><input
-          id="email"
-          maxlength="80"
-          name="email"
-          size="20"
-          type="text"
-        /><br />
+          <input
+            id="last_name"
+            maxlength="80"
+            name="last_name"
+            size="20"
+            type="text"
+            placeholder="Last Name"
+            class="lead-input"
+          /><br />
 
-        <label for="company">Company</label
-        ><input
-          id="company"
-          maxlength="40"
-          name="company"
-          size="20"
-          type="text"
-        /><br />
+          <input
+            id="email"
+            maxlength="80"
+            name="email"
+            size="20"
+            type="text"
+            placeholder="Email"
+            class="lead-input"
+          /><br />
 
-        <label for="city">City</label
-        ><input
-          id="city"
-          maxlength="40"
-          name="city"
-          size="20"
-          type="text"
-        /><br />
+          <input
+            id="phone"
+            maxlength="40"
+            name="phone"
+            size="20"
+            type="text"
+            placeholder="Phone"
+            class="lead-input"
+          /><br />
 
-        <label for="state">State/Province</label
-        ><input
-          id="state"
-          maxlength="20"
-          name="state"
-          size="20"
-          type="text"
-        /><br />
+          <!-- <input
+            id="00N5j00000HXkKd"
+            maxlength="25"
+            name="00N5j00000HXkKd"
+            size="20"
+            type="text"
+            placeholder="Product"
+            class="lead-input"
+          /><br /> -->
 
-        <div
-          class="g-recaptcha"
-          data-sitekey="6LfMF4YfAAAAAFbCSBl3DLEuver-pLXuUeUpuV3_"
-        ></div>
-        <br />
-        <input type="submit" name="submit" />
-      </form>
-    </div>
+          <select
+            id="00N5j00000HXkKd"
+            name="00N5j00000HXkKd"
+            class="lead-select"
+          >
+            <option hidden disabled selected value>Product</option>
+            <option value="VAG001C1">Volkswagen Polo Sedan</option>
+            <option value="VAG002C2">Volkswagen Polo 2021</option>
+            <option value="L003E1">VAZ-21179</option>
+            <option value="L004E2">VAZ-21129</option>
+            <option value="R004C4">Renault Sandero Stepway</option>
+            <option value="R003C3">Renault Sandero</option>
+            <option value="R002C2">Renault Logan Stepway</option>
+            <option value="R001C1">Renault Logan</option>
+            <option value="MI001A1">Phone holder Xiaomi</option>
+            <option value="L002C2">Lada Xray</option>
+            <option value="L001C1">Lada Vesta</option>
+            <option value="HK002C2">Kia Rio X-Line</option>
+            <option value="HK001C1">Kia Rio</option>
+            <option value="R005E1">K7M</option>
+            <option value="R006E2">K4M</option>
+            <option value="HK003C3">Hyundai Accent</option>
+            <option value="HK004C4">Hyundai Solaris</option>
+            <option value="R007E3">H4M</option>
+            <option value="HK005E1">G4LC</option>
+            <option value="HK006E2">G4FG</option>
+            <option value="VAG004E1">CZCA</option>
+            <option value="VAG006E3">CWVA</option>
+            <option value="VAG005E2">CFW</option>
+            <option value="VAG008E5">CFNB</option>
+            <option value="VAG007E4">CFNA</option>
+            <option value="VAG009A1">Carpets Volkswagen</option>
+            <option value="VAG010A2">Carpets Skoda</option>
+            <option value="R008A1">Carpets Renault</option>
+            <option value="L005A1">Carpets Lada</option>
+            <option value="HK008A2">Carpets Kia</option>
+            <option value="HK007A1">Carpets Hyundai</option>
+          </select>
+
+          <div
+            class="g-recaptcha"
+            data-sitekey="6LfMF4YfAAAAAFbCSBl3DLEuver-pLXuUeUpuV3_"
+          ></div>
+          <br />
+          <input
+            type="submit"
+            name="submit"
+            class="submit-button"
+            value="Submit"
+          />
+        </form>
+      </div>
+    </main>
   </body>
 </html>
