--- a/submit.html
+++ b/submit.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <div class="container">
-       <h1>Your form successfully saved in Salesforce </h1>
+       <h1>Your form has been sent to Salesforce </h1>
       </div>
     </main>
 
