feat: implemented validation for email&phone

--- a/form.html
+++ b/form.html
@@ -85,7 +85,11 @@
             type="text"
             placeholder="Email"
             class="lead-input"
-          /><br />
+          />
+          <div class="email-error">
+            <p>must contain '@' and '.com'</p>
+          </div>
+          <br />
 
           <input
             id="phone"
@@ -95,7 +99,11 @@
             type="text"
             placeholder="Phone"
             class="lead-input"
-          /><br />
+          />
+          <div class="phone-error">
+            <p>must not contain letters</p>
+          </div>
+          <br />
 
           <!-- <input
             id="00N5j00000HXkKd"
