--- a/form.html
+++ b/form.html
@@ -174,6 +174,9 @@
             class="g-recaptcha"
             data-sitekey="6LfMF4YfAAAAAFbCSBl3DLEuver-pLXuUeUpuV3_"
           ></div>
+          <div class="captcha-error">
+            <p>You must check the Captcha</p>
+          </div>
           <br />
           <div class="button-block">
             <input
@@ -183,12 +186,6 @@
               value="Submit"
             />
             <div class="disabled-button-block"></div>
-            <div class="info">
-              <p>
-                Be careful, if captcha is not checked, your record won't be
-                saved.
-              </p>
-            </div>
           </div>
         </form>
       </div>
